tests/ui/borrowck/borrowck-init-plus-equal.stderr
error[E0381]: used binding `v` isn't initialized
  --> $DIR/borrowck-init-plus-equal.rs:3:9
   |
LL |     let mut v: isize;
   |         ----- binding declared here but left uninitialized
LL |     v = v + 1;
   |         ^ `v` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let mut v: isize = 42;
   |                      ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
